Fix Sound upload UI button position
With no sound file mounted, the Accept button overlaps to the
instruction text of drag zone.

--- a/options/options.scss
+++ b/options/options.scss
@@ -215,7 +215,6 @@ table {
   .upload {
     display: flex;
     align-items: baseline;
-    height: 3em;
     margin: -5px 0 14px;
 
     label {
